--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,11 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+dependencies = [
+    "gymize>=0.0.1",
+    "stable_baselines3",
+]
+
 [project.urls]
 "Homepage" = "https://github.com/PAIA-Playful-AI-Arena/paiagym"
 "Bug Tracker" = "https://github.com/PAIA-Playful-AI-Arena/paiagym/issues"
